assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');

/* ----- Colors and Fonts -----  */
body {
    font-family: Ubuntu, sans-serif;
    background-color: olive;
}

/* ------------ Navigation -------------- */
.nav-bar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #A6A15E;
}

.nav-bar li {
    float: left;
}

.nav-bar li a {
    display: block;
    color: beige;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.nav-bar li a:hover {
    background-color: #C69F89;
}

.active {
    background-color: olive;
}

/* ------------ Body -------------- */

h1 {
    font-family: 'Ubuntu', 'sans-serif';
    color: beige;
    font-size: 5rem;
    margin-left: 70px;
}

h2 {
    font-family: 'Ubuntu', 'sans-serif';
    color: beige;
    font-size: 2rem;
}

.h2-form {
    font-family: 'Ubuntu', 'sans-serif';
    color: beige;
    font-size: 2rem;
    margin: 50px;
}

h3 {
    font-family: 'Ubuntu', 'sans-serif';
    color: beige;
    font-size: 1rem;
    text-align: center;
}

p {
    color: black;
}

#name {
    border-radius: 8px;
}

#email {
    border-radius: 8px;
}

#phone {
    border-radius: 8px;
}

#dogs {
    border-radius: 8px;
}

#comments {
    border-radius: 8px;
}

#submit {
    border-radius: 8px;
}

/* ------------ Links -------------- */

a {
    color: black;
    text-decoration: underline;
}

a:hover {
    color: rgb(255, 251, 252);
}

/* ------------ Layout -------------- */

.container {
    text-align: justify;
    border-radius: 25px;
    border: 2px solid black;
    background: #A6A15E;
    padding: 10px;
    max-width: 95%;
    height: auto;
    box-sizing: border-box;
    margin: auto;
}

.row {
    padding-top: 1%;
    padding-left: 2%;
    padding-right: 2%;
}

.col-sm-4 {
    background-color: #A6A15E;

}

.col-sm-6 {
    background-color: #A6A15E;
    text-align: left;
    padding: 30px;
}

.vr {
    border-right-style: solid;
}

.card-deck {
    background-color: olive;
    padding: 2%;
}

.card-body text-left {
    text-align: justify;
    background-color: olive;
}

.card {
    background-color: #A6A15E;
    border-radius: 25px;
    border: 2px solid black;
}

.card-img-top {
    border-radius: 25px 25px 0 0;
}

/* ------------ Images -------------- */

.wrapper {
    height: 400px;
}

#hero-outer {
    height: 20px;
}

#hero-image {
    height: auto;
    width: 100%;
    background: url(../images/tonia_kraakman1.jpg) no-repeat center center;
}

.logo {
    float: right;
    padding-top: 20px;
    margin-right: 10px;
}

.blog-image {
    float: right;
    height: 100px;
    width: 100px;
    padding: 20px 10px 10px 10px;
}

.card-img-top {
    width: 100%;
    height: 20vw;
    object-fit: cover;
}

.google-map {
    padding-bottom: 60%;
    position: relative;
}

.google-map iframe {
    height: 100%;
    width: 100%;
    left: 0;
    top: 0;
    position: absolute;
}

/* ------------ Footer -------------- */

.social-networks {
    text-align: center;
}

.social-networks li {
    display: inline;
}

.social-networks i {
    font-size: 250%;
    margin: 5px;
    padding: 2%;
    color: beige;
}

/* Style inputs, select elements and textareas */
input,
select,
textarea {
    width: 100%;
    padding: 12px;
    border: 2px solid black;
    border-radius: 8px;
    box-sizing: border-box;
    resize: vertical;
}

/* Style the label to display next to the inputs */
label {
    padding: 12px 12px 12px 0;
    display: inline-block;
}

input[type=submit] {
    background-color: white;
    width: 15%;
    border: 2px solid;
    border-radius: 10px;
    color: black;
    padding: 15px 15px;
    text-decoration: none;
    text-align: center;
    margin-left: 385px;
    cursor: pointer;
}

input[type=submit]:hover {
    background-color: rgb(203, 198, 198);
}

/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {

    .col-25,
    .col-75,
    input[type=submit] {
        width: 100%;
        margin-top: 0;
    }
}

